globus-gram-job-manager-pbs (2.0-1+gt6.@distro@) @distro@; urgency=low

  * Repackage for GT6 without GPT

 -- Globus Toolkit <support@globus.org>  Thu, 23 Jan 2014 09:30:30 -0500

globus-gram-job-manager-pbs (1.6-2) unstable; urgency=low

  * Make sure globus-scheduler-event-generator-admin is installed before using it in postinst script

 -- Globus Toolkit <support@globus.org>  Thu, 25 Oct 2012 12:43:06 -0400

globus-gram-job-manager-pbs (1.6-1) unstable; urgency=low

  * GT-276: PBS SEG module isn't robust against log files becoming unavailable

 -- Globus Toolkit <support@globus.org>  Wed, 12 Sep 2012 08:42:02 -0400

globus-gram-job-manager-pbs (1.5-1) unstable; urgency=low

  * GRAM-343: lrm packages grid-service files aren't in CLEANFILES

 -- Globus Toolkit <support@globus.org>  Thu, 12 Apr 2012 10:50:30 -0500

globus-gram-job-manager-pbs (1.4-1) unstable; urgency=low

  * GRAM-297: job manager service definitions contain unresolved variables
  * GRAM-318: Periodic lockup of SEG
  * RIC-229: Clean up GPT metadata

 -- Globus Toolkit <support@globus.org>  Thu, 15 Mar 2012 16:50:06 -0400

globus-gram-job-manager-pbs (1.1-2) unstable; urgency=low

  * Update for 5.2.0 release

 -- Globus Toolkit <support@globus.org>  Mon, 05 Dec 2011 17:42:01 -0500

globus-gram-job-manager-pbs (1.1-1) unstable; urgency=low

  * Restore all type for doc packages for gram LRMS

 -- Globus Toolkit <support@globus.org>  Tue, 29 Nov 2011 13:33:23 -0500

globus-gram-job-manager-pbs (1.1-1) unstable; urgency=low

  * Remove obsolete get-orig-source rules

 -- Globus Toolkit <support@globus.org>  Wed, 23 Nov 2011 14:54:53 -0500

globus-gram-job-manager-pbs (1.1-0) unstable; urgency=low

  * Change architecture of LRM doc packages

 -- Globus Toolkit <support@globus.org>  Wed, 23 Nov 2011 11:39:56 -0500

globus-gram-job-manager-pbs (1.1-1) unstable; urgency=low

  * Update to Globus Toolkit 5.1.3

 -- Globus Toolkit <support@globus.org>  Fri, 18 Nov 2011 10:56:59 -0500