@@ -1,18 +1,20 @@
 AC_PREREQ([2.60])
 
-AC_INIT([globus_gram_job_manager_pbs],[2.0],[http://jira.globus.org])
+AC_INIT([globus_gram_job_manager_pbs],[2.1],[http://jira.globus.org])
 AC_SUBST([MAJOR_VERSION], [${PACKAGE_VERSION%%.*}])
 AC_SUBST([MINOR_VERSION], [${PACKAGE_VERSION##*.}])
 AC_SUBST([AGE_VERSION], [1])
 AC_SUBST([PACKAGE_DEPS], ["globus-common >= 14, globus-scheduler-event-generator >= 4"])
 
 AC_CONFIG_AUX_DIR([build-aux])
-AM_INIT_AUTOMAKE([foreign parallel-tests 1.11 tar-pax])
+AM_INIT_AUTOMAKE([1.11 foreign parallel-tests tar-pax])
 LT_INIT([dlopen win32-dll])
 
 m4_include([dirt.sh])
 AC_SUBST(DIRT_TIMESTAMP)
 AC_SUBST(DIRT_BRANCH_ID)
+
+AC_PROG_CC_C99
 
 PKG_CHECK_MODULES([PACKAGE_DEP], $PACKAGE_DEPS)
 
@@ -209,6 +211,9 @@ AC_HELP_STRING([--with-perlmoduledir=DIR],
     perlmoduledir='${libdir}/perl'
 ])
 AC_SUBST(perlmoduledir)
+
+AC_CONFIG_LIBOBJ_DIR([seg])
+AC_REPLACE_FUNCS([getline])
 
 AC_CONFIG_FILES(
         globus-gram-job-manager-pbs-uninstalled.pc
