@@ -11,7 +11,7 @@ endif
 
 name = globus-gram-job-manager-pbs
 _name = globus_gram_job_manager_pbs
-version = 2.0
+version = 2.1
 
 INSTALLDIR = $(CURDIR)/debian/tmp
 DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
