@@ -1,3 +1,9 @@
+globus-gram-job-manager-pbs (2.1-1+gt6.@distro@) @distro@; urgency=low
+
+  * Add getline implementations for older or non-POSIX systems
+
+ -- Globus Toolkit <support@globus.org>  Tue, 11 Feb 2014 11:29:03 -0500
+
 globus-gram-job-manager-pbs (2.0-1+gt6.@distro@) @distro@; urgency=low
 
   * Repackage for GT6 without GPT
